--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,3 @@
-/build/
-
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
-
-
-# Eclipse Core
-.project
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-contributors.txt
+.settings/org.eclipse.wst.common.project.facet.core.xml
