--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,6 @@
+######################
+# Eclipse
+######################
+ 
 /build/
-
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
-
-
-# Eclipse Core
-.project
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
-contributors.txt
-
-#NetBeans related
-/nbproject/
-/nbbuild/
-build.xml
+/test/
