--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,12 @@
   	<description></description>
   	<servlet-class>controller.PatientPrescripServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>getpatolddata</servlet-name>
+  	<display-name>getpatolddata</display-name>
+  	<description></description>
+  	<servlet-class>controller.getpatolddata</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>GPUUIDServlet</servlet-name>
   	<url-pattern>/GPUUIDServlet</url-pattern>
@@ -43,5 +49,9 @@
   <servlet-mapping>
   	<servlet-name>PatientPrescripServlet</servlet-name>
   	<url-pattern>/PatientPrescripServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>getpatolddata</servlet-name>
+  	<url-pattern>/getpatolddata</url-pattern>
   </servlet-mapping>
 </web-app>
