--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<groupId>taglibs</groupId>
 		<artifactId>standard</artifactId>
 		<version>1.1.2</version>
+		<scope>runtime</scope>
 	</dependency> 
     <dependency> 
     	<groupId>javax.servlet</groupId> 
